--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.2'
     //customized edittext from github by rengwuxian
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.android.support:design:28.0.0-rc02'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
