--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.xiwbo.chattyu">
-
 	<!-- To auto-complete the email text field in the login form with the user's emails -->
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.READ_PROFILE" />
@@ -14,17 +13,21 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-		<activity
-			android:name=".LoginScreenActivity"
-			android:label="@string/title_activity_login_screen"
-			android:theme="@style/AppTheme"></activity>
-		<activity android:name=".SplashScreenActivity">
+		<activity android:name=".SplashScreenActivity" android:theme="@style/NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".LoginScreenActivity"
+			android:label="@string/title_activity_login_screen"
+			android:theme="@style/AppTheme" />
+		<activity
+			android:name=".JavaLayout"
+			android:label="JavaLayout"
+			android:theme="@style/AppTheme" />
 	</application>
 
 </manifest>
